@@ -3,10 +3,14 @@
 	* sysdeps/ia64/tcb-offsets.sym (TID): Add.
 	* sysdeps/unix/sysv/linux/ia64/clone2.S: New file.
 
-	* Makefile (tests): Add tst-getpid2.c.
+	* Makefile (tests): Add tst-getpid2.
 	* tst-getpid1.c (TEST_CLONE_FLAGS): Define.
 	(do_test): Use it.  Use __clone2 instead of clone on ia64.
 	* tst-getpid2.c: New test.
+
+2004-12-07  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
+
+	* sysdeps/unix/sysv/linux/sh/clone.S: New file.
 
 2004-12-04  Ulrich Drepper  <drepper@redhat.com>
 
